--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,24 @@
 .read-the-docs {
   color: #888;
 }
+
+.dropdown-heading-value {
+  color: black ! important;
+}
+
+.dropdown-container {
+  color: black ! important;
+}
+
+.dropdown-heading {
+  color: black ! important;
+} 
+
+.gray {
+  color: black ! important;
+} 
+
+.rmsc .search input {
+  color: black ! important;
+} 
+
